--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -28,13 +28,13 @@
 #
 
 on early-init
-    export LD_SHIM_LIBS "/system/vendor/lib64/lib-imsvt.so|libshims_ims.so:/system/bin/mm-qcamera-daemon|libshims_camera.so"
+    export LD_SHIM_LIBS "/system/vendor/lib64/lib-imsvt.so|libshims_ims.so:/system/vendor/bin/mm-qcamera-daemon|libshims_camera.so"
 
 on post-fs data
     mkdir /data/goodix 0700 system system
 
 on boot
-    chown system system  /dev/goodix_fp
+    chown system system /dev/goodix_fp
     chmod 0644 /dev/goodix_fp
 
 on property:ro.boot.fpsensor=fpc
@@ -45,7 +45,7 @@ on property:ro.boot.fpsensor=gdx
     setprop persist.sys.fp.goodix 1
     setprop ro.hardware.fingerprint gdx
 
-service gx_fpd /system/bin/gx_fpd
+service gx_fpd /vendor/bin/gx_fpd
     class late_start
     user system
     group system
